# pokemonTCG

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/opponent_decks/: README.md  fishcat_v8.csv  mcts_sample.csv  meta_a.csv
docs/: BRANCH_WORKFLOW.md  COLAB.md  LOCAL.md  MCTS_EXPERIMENTS.md
models/: README.md
notebooks/: colab_ppo.ipynb
scripts/: train_colab_ppo.sh  train_local_smoke.sh
src/poketcg/: __init__.py  cli.py  engine.py  external_submission.py  match.py  mcts.py  paths.py  submission.py  submission_runtime.py
src/poketcg/agents/: __init__.py  advantage_agent.py  base.py  bc_agent.py  external_agent.py  mega_lucario_expert.py  random_agent.py  residual_agent.py  rule_agent.py  tactical_planner.py
src/poketcg/rl/: __init__.py  action_space.py  advantage_candidates.py  advantage_data.py  collect_bc.py  collect_dagger.py  collect_expert_iteration.py  collect_external_expert.py  collect_libraryout_trajectories.py  collect_paired_rollouts.py  data.py  (+34 more)
tests/: test_advantage.py  test_advantage_agent.py  test_coverage_diagnostics.py  test_dagger.py  test_engine.py  test_evaluation.py  test_executor.py  test_expert_parity.py  test_external_agent.py  test_external_expert.py  test_external_submission.py  test_heldout_option.py  test_macro_plan.py  test_mcts.py  test_paired_rollout.py  test_planner_diagnostics.py  test_random_agent.py  test_replay_diagnostics.py  test_residual.py  test_rl.py  test_rule_agent.py  test_submission.py  test_symmetry_diagnostics.py  test_tactical_planner.py  test_turn_synergy.py  test_value_diagnostics.py
